--- a/package.xml
+++ b/package.xml
@@ -1,39 +1,17 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>road_crossing_gazebo</name>
-  <version>0.0.0</version>
-  <description>Simulation for experimental verification of road_crossing package</description>
+  <version>1.0.0</version>
+  <description>Simulation for experimental verification of road_crossing package.</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <maintainer email="vlkjan6@fel.cvut.cz">Jan Vlk</maintainer>
   <license>BSD-3</license>
 
-  <!-- The *depend tags are used to specify dependencies -->
-  <!-- Dependencies can be catkin packages or system dependencies -->
-  <!-- Examples: -->
-  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
-  <!--   <depend>roscpp</depend> -->
-  <!--   Note that this is equivalent to the following: -->
-  <!--   <build_depend>roscpp</build_depend> -->
-  <!--   <exec_depend>roscpp</exec_depend> -->
-  <!-- Use build_depend for packages you need at compile time: -->
-  <!--   <build_depend>message_generation</build_depend> -->
-  <!-- Use build_export_depend for packages you need in order to build against this package: -->
-  <!--   <build_export_depend>message_generation</build_export_depend> -->
-  <!-- Use buildtool_depend for build tool packages: -->
-  <!--   <buildtool_depend>catkin</buildtool_depend> -->
-  <!-- Use exec_depend for packages you need at runtime: -->
-  <!--   <exec_depend>message_runtime</exec_depend> -->
-  <!-- Use test_depend for packages you need only for testing: -->
-  <!--   <test_depend>gtest</test_depend> -->
-  <!-- Use doc_depend for packages you need only for building documentation: -->
-  <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
-
-  <!-- The export tag contains other, unspecified, tags -->
-  <export>
-    <!-- Other tools can request additional information be placed here -->
-
-  </export>
+  <exec_depend>road_crossing</exec_depend>
+  <exec_depend>compass</exec_depend>
+  <exec_depend>imu_pipeline</exec_depend>
+  <exec_depend>ouster_description</exec_depend>
+  <exec_depend>gps_to_path</exec_depend>
 </package>
